adding bower remote deploy

--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
 
   "dependencies": {
     "express": "~3.4.4",
-    "mongoose": "~3.6.13"
+    "mongoose": "~3.6.13",
+    "bower": "^1.4.1"
   },
   
+ "scripts": {
+    "postinstall": "HOME=$OPENSHIFT_REPO_DIR bower install || bower install"
+  },
+   
   "devDependencies": {},
   "bundleDependencies": [],
 
